--- a/Basic/11 Queries with aggregates (Pt. 2).ipynb
+++ b/Basic/11 Queries with aggregates (Pt. 2).ipynb
@@ -151,8 +151,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "048a86be-4116-4079-b848-e3f3fa4303d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Engineer', 17)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ret = conn.execute('''SELECT role,sum(years_employed) FROM employees where role='Engineer';''')\n",
+    "for r in ret:\n",
+    "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e64997c0-b9a7-47c0-a674-5d557afc4435",
    "metadata": {},
    "outputs": [
     {
