--- a/Basic/08 A short note on NULLs.ipynb
+++ b/Basic/08 A short note on NULLs.ipynb
@@ -212,6 +212,16 @@
     "for r in ret:\n",
     "    print(r)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "545f73ac-1bb8-4755-a525-6f7b61eb5ede",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
