--- a/Basic/10 Queries with aggregates (Pt. 1).ipynb
+++ b/Basic/10 Queries with aggregates (Pt. 1).ipynb
@@ -190,6 +190,16 @@
     "for r in ret:\n",
     "    print(r)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbf26b6c-9157-4a55-84a1-ec2b42bca31e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
