--- a/Basic/11 Queries with aggregates (Pt. 2).ipynb
+++ b/Basic/11 Queries with aggregates (Pt. 2).ipynb
@@ -188,6 +188,16 @@
     "for r in ret:\n",
     "    print(r)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12927043-aca1-4a39-bf31-2d99e686bbfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
