--- a/Basic/13 Inserting rows.ipynb
+++ b/Basic/13 Inserting rows.ipynb
@@ -228,6 +228,16 @@
     "for r in ret:\n",
     "    print(r)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6057ecbc-671a-438b-8b43-f589e8bf597d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
