--- a/Basic/02 Queries with constraints.ipynb
+++ b/Basic/02 Queries with constraints.ipynb
@@ -207,6 +207,16 @@
     "for r in ret:\n",
     "    print(r)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "043f11ae-aff5-4e51-bdd8-f6b831c44708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
