--- a/Basic/15 Deleting rows.ipynb
+++ b/Basic/15 Deleting rows.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "aab78f82-3b63-48b1-8ac7-55777e5001b0",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e8e4535a-8068-4adc-bdee-477959a20976",
    "metadata": {},
    "outputs": [
@@ -75,19 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "fb06386a-6971-4085-8354-ee5d5650bed5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "database is locked",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ret \u001b[38;5;241m=\u001b[39m \u001b[43mconn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'''\u001b[39;49m\u001b[38;5;124;43mDelete from movies where year < 2005;\u001b[39;49m\u001b[38;5;124;43m'''\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m ret \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m'''\u001b[39m\u001b[38;5;124mSELECT * FROM movies;\u001b[39m\u001b[38;5;124m'''\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m r \u001b[38;5;129;01min\u001b[39;00m ret:\n",
-      "\u001b[0;31mOperationalError\u001b[0m: database is locked"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7, 'Cars', 'John Lasseter', 2006, 117)\n",
+      "(8, 'Ratatouille', 'Brad Bird', 2007, 115)\n",
+      "(9, 'WALL-E', 'Andrew Stanton', 2008, 104)\n",
+      "(10, 'Up', 'Pete Docter', 2009, 101)\n",
+      "(11, 'Toy Story 3', 'Lee Unkrich', 2010, 103)\n",
+      "(12, 'Cars 2', 'John Lasseter', 2011, 120)\n",
+      "(13, 'Brave', 'Brenda Chapman', 2012, 102)\n",
+      "(14, 'Monsters University', 'Dan Scanlon', 2013, 110)\n"
      ]
     }
    ],
@@ -108,19 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "d25e30a0-8916-4a06-a444-3efcb0e39f37",
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "database is locked",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ret \u001b[38;5;241m=\u001b[39m \u001b[43mconn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'''\u001b[39;49m\u001b[38;5;124;43mDelete from movies where director = \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAndrew Stanton\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m;\u001b[39;49m\u001b[38;5;124;43m'''\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m ret \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m'''\u001b[39m\u001b[38;5;124mSELECT * FROM movies;\u001b[39m\u001b[38;5;124m'''\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m r \u001b[38;5;129;01min\u001b[39;00m ret:\n",
-      "\u001b[0;31mOperationalError\u001b[0m: database is locked"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7, 'Cars', 'John Lasseter', 2006, 117)\n",
+      "(8, 'Ratatouille', 'Brad Bird', 2007, 115)\n",
+      "(10, 'Up', 'Pete Docter', 2009, 101)\n",
+      "(11, 'Toy Story 3', 'Lee Unkrich', 2010, 103)\n",
+      "(12, 'Cars 2', 'John Lasseter', 2011, 120)\n",
+      "(13, 'Brave', 'Brenda Chapman', 2012, 102)\n",
+      "(14, 'Monsters University', 'Dan Scanlon', 2013, 110)\n"
      ]
     }
    ],
@@ -129,6 +134,16 @@
     "ret = conn.execute('''SELECT * FROM movies;''')\n",
     "for r in ret:\n",
     "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "39d1511c-2f9e-4039-847f-6d3d46beff14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
    ]
   }
  ],
